--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,10 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     
     <title>Hitec</title>
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
