--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       <script src="./dashmin-1.0.0/lib/tempusdominus/js/moment-timezone.min.js"></script>
       <script src="./dashmin-1.0.0/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script> -- -->
       <script src="./js.js"></script>
-      <!-- <script>
+      <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', () => {
             navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
@@ -72,6 +72,6 @@
             });
           });
         }
-      </script> -->
+      </script>
   </body>
 </html>
