--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8145RZFGT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-X8145RZFGT');
+</script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <link
@@ -59,6 +70,8 @@
       href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@800&display=swap"
       rel="stylesheet"
     />
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
